--- a/docs/style.css
+++ b/docs/style.css
@@ -5,6 +5,7 @@ body {
 	margin: 0px;
 	/* background-color: antiquewhite; */
 	padding: 0px 20px;
+	font-family: 'Roboto', sans-serif;
 }
 .start-page {
 	display: flex;
